// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query: properties returns 0 count when no properties are found 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "summary": Object {
        "count": 0,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query: properties successfully retrieves property summary.count data 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "summary": Object {
        "count": 120,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query: properties successfully retrieves property summary.price data 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "summary": Object {
        "price": Object {
          "max": 200,
          "mean": 150,
          "median": 150,
          "min": 100,
          "mode": 100,
          "standardDev": 50,
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query: properties successfully retrieves results 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "results": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
